Precompilation, fix for homepage overflow and removal of unneeded routes

--- a/app/assets/stylesheets/page_styles/home_styles.scss
+++ b/app/assets/stylesheets/page_styles/home_styles.scss
@@ -421,6 +421,10 @@ body.welcome-page {
 
 @media (max-width: 760px) {
   #kickstarter {
+    .kickstarter-background {
+      width: 140%;
+      height: 110%;
+    }
     .kickstarter-iframe {
       margin: 20px auto;
       position: relative;
